@@ -7,6 +7,7 @@ import guess.domain.auxiliary.EventDateMinTrackTime;
 import guess.domain.auxiliary.EventMinTrackTimeEndDayTime;
 import guess.domain.source.Event;
 import guess.domain.source.EventType;
+import guess.domain.source.Organizer;
 import guess.domain.source.Talk;
 import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -53,6 +54,8 @@ class EventServiceImplTest {
     private static final LocalTime TALK_TRACK_TIME1;
     private static final LocalTime TALK_TRACK_TIME2;
 
+    private static Organizer organizer0;
+    private static Organizer organizer1;
     private static EventType eventType0;
     private static EventType eventType1;
     private static EventType eventType2;
@@ -89,16 +92,25 @@ class EventServiceImplTest {
 
     @BeforeAll
     static void init() {
+        organizer0 = new Organizer();
+        organizer0.setId(0);
+
+        organizer1 = new Organizer();
+        organizer1.setId(1);
+
         eventType0 = new EventType();
         eventType0.setId(0);
         eventType0.setConference(Conference.JPOINT);
+        eventType0.setOrganizer(organizer0);
 
         eventType1 = new EventType();
         eventType1.setId(1);
+        eventType1.setOrganizer(organizer1);
 
         eventType2 = new EventType();
         eventType2.setId(2);
         eventType2.setConference(Conference.JOKER);
+        eventType2.setOrganizer(organizer1);
 
         EventType eventType3 = new EventType();
         eventType3.setId(3);
@@ -196,43 +208,83 @@ class EventServiceImplTest {
     class GetEventsTest {
         private Stream<Arguments> data() {
             return Stream.of(
-                    arguments(false, false, null, Collections.emptyList()),
-                    arguments(false, true, null, List.of(event1)),
-                    arguments(true, false, null, List.of(event0, event2)),
-                    arguments(true, true, null, List.of(event0, event1, event2)),
+                    arguments(false, false, null, null, Collections.emptyList()),
+                    arguments(false, false, 0L, null, Collections.emptyList()),
+                    arguments(false, false, 1L, null, Collections.emptyList()),
+                    arguments(false, true, null, null, List.of(event1)),
+                    arguments(false, true, 0L, null, Collections.emptyList()),
+                    arguments(false, true, 1L, null, List.of(event1)),
+                    arguments(true, false, null, null, List.of(event0, event2)),
+                    arguments(true, false, 0L, null, List.of(event0)),
+                    arguments(true, false, 1L, null, List.of(event2)),
+                    arguments(true, true, null, null, List.of(event0, event1, event2)),
+                    arguments(true, true, 0L, null, List.of(event0)),
+                    arguments(true, true, 1L, null, List.of(event1, event2)),
 
-                    arguments(false, false, 0L, Collections.emptyList()),
-                    arguments(false, true, 0L, Collections.emptyList()),
-                    arguments(true, false, 0L, List.of(event0)),
-                    arguments(true, true, 0L, List.of(event0)),
+                    arguments(false, false, null, 0L, Collections.emptyList()),
+                    arguments(false, false, 0L, 0L, Collections.emptyList()),
+                    arguments(false, false, 1L, 0L, Collections.emptyList()),
+                    arguments(false, true, null, 0L, Collections.emptyList()),
+                    arguments(false, true, 0L, 0L, Collections.emptyList()),
+                    arguments(false, true, 1L, 0L, Collections.emptyList()),
+                    arguments(true, false, null, 0L, List.of(event0)),
+                    arguments(true, false, 0L, 0L, List.of(event0)),
+                    arguments(true, false, 1L, 0L, Collections.emptyList()),
+                    arguments(true, true, null, 0L, List.of(event0)),
+                    arguments(true, true, 0L, 0L, List.of(event0)),
+                    arguments(true, true, 1L, 0L, Collections.emptyList()),
 
-                    arguments(false, false, 1L, Collections.emptyList()),
-                    arguments(false, true, 1L, List.of(event1)),
-                    arguments(true, false, 1L, Collections.emptyList()),
-                    arguments(true, true, 1L, List.of(event1)),
+                    arguments(false, false, null, 1L, Collections.emptyList()),
+                    arguments(false, false, 0L, 1L, Collections.emptyList()),
+                    arguments(false, false, 1L, 1L, Collections.emptyList()),
+                    arguments(false, true, null, 1L, List.of(event1)),
+                    arguments(false, true, 0L, 1L, Collections.emptyList()),
+                    arguments(false, true, 1L, 1L, List.of(event1)),
+                    arguments(true, false, null, 1L, Collections.emptyList()),
+                    arguments(true, false, 0L, 1L, Collections.emptyList()),
+                    arguments(true, false, 1L, 1L, Collections.emptyList()),
+                    arguments(true, true, null, 1L, List.of(event1)),
+                    arguments(true, true, 0L, 1L, Collections.emptyList()),
+                    arguments(true, true, 1L, 1L, List.of(event1)),
 
-                    arguments(false, false, 2L, Collections.emptyList()),
-                    arguments(false, true, 2L, Collections.emptyList()),
-                    arguments(true, false, 2L, List.of(event2)),
-                    arguments(true, true, 2L, List.of(event2)),
+                    arguments(false, false, null, 2L, Collections.emptyList()),
+                    arguments(false, false, 0L, 2L, Collections.emptyList()),
+                    arguments(false, false, 1L, 2L, Collections.emptyList()),
+                    arguments(false, true, null, 2L, Collections.emptyList()),
+                    arguments(false, true, 0L, 2L, Collections.emptyList()),
+                    arguments(false, true, 1L, 2L, Collections.emptyList()),
+                    arguments(true, false, null, 2L, List.of(event2)),
+                    arguments(true, false, 0L, 2L, Collections.emptyList()),
+                    arguments(true, false, 1L, 2L, List.of(event2)),
+                    arguments(true, true, null, 2L, List.of(event2)),
+                    arguments(true, true, 0L, 2L, Collections.emptyList()),
+                    arguments(true, true, 1L, 2L, List.of(event2)),
 
-                    arguments(false, false, 3L, Collections.emptyList()),
-                    arguments(false, true, 3L, Collections.emptyList()),
-                    arguments(true, false, 3L, Collections.emptyList()),
-                    arguments(true, true, 3L, Collections.emptyList())
+                    arguments(false, false, null, 3L, Collections.emptyList()),
+                    arguments(false, false, 0L, 3L, Collections.emptyList()),
+                    arguments(false, false, 1L, 3L, Collections.emptyList()),
+                    arguments(false, true, null, 3L, Collections.emptyList()),
+                    arguments(false, true, 0L, 3L, Collections.emptyList()),
+                    arguments(false, true, 1L, 3L, Collections.emptyList()),
+                    arguments(true, false, null, 3L, Collections.emptyList()),
+                    arguments(true, false, 0L, 3L, Collections.emptyList()),
+                    arguments(true, false, 1L, 3L, Collections.emptyList()),
+                    arguments(true, true, null, 3L, Collections.emptyList()),
+                    arguments(true, true, 0L, 3L, Collections.emptyList()),
+                    arguments(true, true, 1L, 3L, Collections.emptyList())
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
-        void getEvents(boolean isConferences, boolean isMeetups, Long eventTypeId, List<Event> expected) {
+        void getEvents(boolean isConferences, boolean isMeetups, Long organizerId, Long eventTypeId, List<Event> expected) {
             EventDao eventDao = Mockito.mock(EventDao.class);
             EventTypeDao eventTypeDao = Mockito.mock(EventTypeDao.class);
             EventService eventService = new EventServiceImpl(eventDao, eventTypeDao);
 
             Mockito.when(eventTypeDao.getEventTypes()).thenReturn(List.of(eventType0, eventType1, eventType2));
 
-            assertEquals(expected, eventService.getEvents(isConferences, isMeetups, eventTypeId));
+            assertEquals(expected, eventService.getEvents(isConferences, isMeetups, organizerId, eventTypeId));
         }
     }
 
